// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiButtonIcon Baseline is rendered 1`] = `
<span
  className="kuiButton__icon kuiIcon"
/>
`;

exports[`KuiButtonIcon Props className renders the classes 1`] = `
<span
  className="kuiButton__icon kuiIcon testClass1 testClass2"
/>
`;

exports[`KuiCreateButtonIcon is rendered with create class 1`] = `
<span
  class="kuiButton__icon kuiIcon fa-plus"
/>
`;

exports[`KuiDeleteButtonIcon is rendered with delete class 1`] = `
<span
  class="kuiButton__icon kuiIcon fa-trash"
/>
`;

exports[`KuiLoadingButtonIcon is rendered with loading class 1`] = `
<span
  class="kuiButton__icon kuiIcon fa-spinner fa-spin"
/>
`;

exports[`KuiNextButtonIcon is rendered with next class 1`] = `
<span
  class="kuiButton__icon kuiIcon fa-chevron-right"
/>
`;

exports[`KuiPreviousButtonIcon is rendered with previous class 1`] = `
<span
  class="kuiButton__icon kuiIcon fa-chevron-left"
/>
`;
